updated apps home page, please fix heights for alignment and add hamburger, and  add our own app content + links

--- a/AppsHome/css/appshome.css
+++ b/AppsHome/css/appshome.css
@@ -6,8 +6,7 @@
 				padding:0;
 			}
 			body {
-				background-image:url('');
-				background-size:cover;
+				background-image:url('../../images/background2.jpg');
 			}
 			#GUI {
 				height:100%;
@@ -21,10 +20,15 @@
 			}
 			.wrapper {
 				margin:auto;
-				background-color:rgba(255,255,255,0.4);
+				background-color:rgba(255,255,255,0.1);
 				padding:0 20px;
-				width: 1000px;
+				width: 75%;
 				font-size:3em;
+			}
+			@media only screen and (max-width: 1024px){
+				.wrapper {
+					width: 800px;
+				}
 			}
 			@media only screen and (max-width: 800px), (max-device-width:415px){
 				.wrapper {
@@ -32,7 +36,7 @@
 				}
 			}
 			.appsContent {
-				background-color:rgba(235,240,245,0.6);
+				background-color:rgba(237,242,247,0.4);
 				border-width: 5px;
 				border-style:solid;
 				border-color:transparent;
@@ -43,8 +47,9 @@
 				display:inline-block;
 				border: 10px solid transparent;
 				float:left;
+				height:auto;
 			}
-			@media only screen and (max-width: 800px), (max-device-width:415px) {
+			@media only screen and (max-width: 1024px), (max-device-width:415px) {
 				.app {
 					width:100%;
 				}
@@ -52,7 +57,7 @@
 			.content {
 				display:block;
 				width:100%;
-				background-color:white;
+				background-color:rgba(253,253,253,0.6);
 				min-height:400px;
 			}
 			.content table td{
@@ -63,15 +68,15 @@
 				width:100%;
 				height:300px;
 			}
-			.content table td {
-				width:50%;
+			.content table tr:first-child td {
+				width:20%;
 			}
 			.content table td img{
 				width:100%;
 				height:auto;
 			}
 			.content table td h2, p{
-				font-size:2em;
+				font-size:1.9em;
 				margin-left:0.2em
 			}
 			h2 {
